gRPC NotificationService front over DevNotificationServer (notify.proto)
Extends the gRPC surface (T020) with the PING front per notify.proto.

- NotificationServiceImpl: signal() submits a sealed token and ALWAYS returns a uniform
  SignalResponse, silently dropping forged/tampered tokens (AEAD already prevents the bit) so
  token validity is never leaked to a submitter/observer; fetchDigest() consumes the client's
  digest via digestAndReset so a retrieved notification isn't re-reported (carrier when empty).
- transport Test now forks with --enable-native-access (the notification front loads libsodium).
- Tests (2, in-process gRPC): signal->fetchDigest reports + consumes the bit; a forged token
  gives a uniform response and sets no bit (FR-003).

72 tests green across 5 modules.